...
            onDismissRequest = sessionListViewModel::onActionDismiss,
            title = { Text(text = "重命名会话") },
            text = {
                OutlinedTextField(
                    value = sessionListState.renameText,
                    onValueChange = sessionListViewModel::onRenameTextChange,
                    label = { Text(text = "标题") },
                    singleLine = true
                )
            },
            confirmButton = {
                TextButton(
                    onClick = {
...
